[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "flo-blur-mvp"
version = "0.1.0"
description = "Blur detection simulator MVP with GUI alerts and CSV logging."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=9.0.0"]

[project.scripts]
flo-blur-mvp = "blurry_mvp:main"
